change name to Zero Pageviews

--- a/assets/src/js/components/totals.css
+++ b/assets/src/js/components/totals.css
@@ -29,7 +29,7 @@
     margin-left: 6px;
 }
 .totals-change.neutral {
-    color: #AAA;
+    color: #ZP;
 }
 .totals-change.up {
     color: limegreen;
