--- a/assets/src/js/components/top-referrers.css
+++ b/assets/src/js/components/top-referrers.css
@@ -1,4 +1,4 @@
-.top-posts {
+.top-referrers {
     background: white;
     border-radius: 6px;
     border: 1px solid #BBB;
@@ -6,23 +6,23 @@
     margin: 0 12px 12px 0;
 }
 
-.top-posts h3 {
+.top-referrers h3 {
     margin-top: 0;
 }
-.top-posts th {
+.top-referrers th {
     text-align: left;
     padding: 4px 0;
     margin-right: 12px;
 }
-.top-posts td {
+.top-referrers td {
     padding: 4px 0;
 }
 
-.top-posts .amount-col {
+.top-referrers .amount-col {
     padding-left: 12px;
     text-align: right;
 }
 
-.top-posts .main-col {
+.top-referrers .main-col {
     min-width: 240px;
 }
