--- a/assets/src/js/components/datepicker.css
+++ b/assets/src/js/components/datepicker.css
@@ -10,6 +10,11 @@
 	border-radius: 6px;
 	display: inline-block;
 	background: white;
+	line-height: 20px;
+}
+
+.date-label .dashicons {
+	margin-right: 2px;
 }
 
 .date-picker-ui {
