--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -1,7 +1,8 @@
+@import './variables.scss';
+@import './mixins.scss';
+
 .chart-container {
-    background: white;
-    border-radius: 6px;
+    @include box;
     padding: 18px 6px 6px 6px;
-    border: 1px solid #BBB;
     margin-bottom: 12px;
 }
