correct rename to sass imports (it worked without throwing an error...)

--- a/assets/src/sass/totals.scss
+++ b/assets/src/sass/totals.scss
@@ -1,5 +1,5 @@
-@import './variables.scss';
-@import './mixins.scss';
+@import './_variables.scss';
+@import './_mixins.scss';
 
 .totals-container {
     background: #2e363f;
