--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -1,5 +1,5 @@
-@import './variables.scss';
-@import './mixins.scss';
+@import './_variables.scss';
+@import './_mixins.scss';
 
 .chart-container {
     @include box;
