change box mixin to koko-panel

--- a/assets/src/sass/_mixins.scss
+++ b/assets/src/sass/_mixins.scss
@@ -1,6 +1,6 @@
 @import '_variables.scss';
 
-@mixin box {
+@mixin koko-panel {
     background: white;
     border-radius: 6px;
     border: 1px solid $border-base;
