add simple pagination to page & referrers table

--- a/assets/src/sass/admin.scss
+++ b/assets/src/sass/admin.scss
@@ -70,4 +70,24 @@
         }
     }
 
+    .pagination {
+        cursor: pointer;
+        display: inline-block;
+        margin-left: 15px;
+
+        .prev,
+        .next {
+            display: inline-block;
+            padding: 0 5px;
+        }
+
+        .prev {
+
+        }
+
+        .next {
+
+        }
+    }
+
 }
