minor styling adjustments

--- a/assets/src/sass/_variables.scss
+++ b/assets/src/sass/_variables.scss
@@ -1,6 +1,9 @@
 
-$border-base: #bbb;
+$border-base: #DDD;
+$border-divider: #EEE;
 
 $stats-neutral: #aaa;
 $stats-up: limegreen;
 $stats-down: palevioletred;
+
+$color-muted: #AAA;
