--- a/assets/src/sass/datepicker.scss
+++ b/assets/src/sass/datepicker.scss
@@ -1,57 +1,62 @@
 @import './_variables.scss';
 
-.date-nav {
-	position: relative;
-	margin-bottom: 12px;
-}
+#koko-analytics-admin {
 
-.date-label {
-	cursor: pointer;
-	padding: 6px;
-	border: 1px solid $border-base;
-	border-radius: 6px;
-	display: inline-block;
-	background: white;
-	line-height: 20px;
-}
+	.date-nav {
+		position: relative;
+		margin-bottom: 12px;
+	}
 
-.date-label .dashicons {
-	margin-right: 2px;
-}
+	.date-label {
+		cursor: pointer;
+		padding: 6px;
+		border: 1px solid $border-base;
+		border-radius: 6px;
+		display: inline-block;
+		background: white;
+		line-height: 20px;
+	}
 
-.date-picker-ui {
-	background: white;
-	display: flex;
-	width: auto;
-	z-index: 20;
-	border-radius: 6px;
-	border: 1px solid $border-base;
-	position: absolute;
-	margin-top: 6px;
-}
+	.date-label .dashicons {
+		margin-right: 2px;
+	}
 
-.date-presets {
-	padding: 12px 24px 12px 12px;
-	border-right: 1px solid $border-base;
-}
+	.date-picker-ui {
+		background: white;
+		display: flex;
+		width: auto;
+		z-index: 20;
+		border-radius: 6px;
+		border: 1px solid $border-base;
+		position: absolute;
+		margin-top: 6px;
+	}
 
-.date-presets strong {
-	display: block;
-	padding: 6px 0;
-}
+	.date-presets {
+		padding: 12px 24px 12px 12px;
+		border-right: 1px solid $border-base;
+	}
 
-.date-presets a {
-	display: block;
-	padding: 4px 0;
-}
+	.date-presets strong {
+		display: block;
+		padding: 6px 0;
+	}
 
-.date-picker {
-	padding: 12px;
-}
+	.date-presets a {
+		display: block;
+		padding: 4px 0;
+	}
 
-.date-picker .pika-single {
-	border: 0;
-}
-.date-picker .pika-lendar {
-	margin: 0;
-}
+	.date-picker {
+		padding: 12px;
+	}
+
+	.date-picker .pika-single {
+		border: 0;
+	}
+
+	.date-picker .pika-lendar {
+		margin: 0;
+	}
+
+} /* end koko analytics wrap */
