--- a/assets/src/sass/totals.scss
+++ b/assets/src/sass/totals.scss
@@ -1,53 +1,55 @@
 @import './_variables.scss';
 
-.totals-container {
-    background: #2e363f;
-    color: white;
-    padding: 24px;
-    margin-bottom: 12px;
-    display: flex;
-    border-radius: 6px;
-}
-
-.totals-box {
-    display: block;
-    margin-right: 48px;
-}
-
-.totals-label {
-	color: #EEE;
-    margin-bottom: 6px;
-	font-size: 14px;
-}
-
-.totals-amount {
-    display: block;
-    line-height: 48px;
-    font-size: 48px;
-    font-weight: 500;
-    letter-spacing: -1px;
-	margin-bottom: 6px;
-
-	span {
-		font-size: 0.4em;
-		font-weight: normal;
-		vertical-align: top;
-		letter-spacing: normal;
+#koko-analytics-admin {
+	.totals-container {
+		background: #2e363f;
+		color: white;
+		padding: 24px;
+		margin-bottom: 12px;
+		display: flex;
+		border-radius: 6px;
 	}
-}
 
-.totals-compare {
-	color: #EEE;
-}
+	.totals-box {
+		display: block;
+		margin-right: 48px;
+	}
 
-.neutral {
-	color: $stats-neutral;
-}
+	.totals-label {
+		color: #EEE;
+		margin-bottom: 6px;
+		font-size: 14px;
+	}
 
-.up {
-	color: $stats-up;
-}
+	.totals-amount {
+		display: block;
+		line-height: 48px;
+		font-size: 48px;
+		font-weight: 500;
+		letter-spacing: -1px;
+		margin-bottom: 6px;
 
-.down {
-	color: $stats-down;
-}
+		span {
+			font-size: 0.4em;
+			font-weight: normal;
+			vertical-align: top;
+			letter-spacing: normal;
+		}
+	}
+
+	.totals-compare {
+		color: #EEE;
+	}
+
+	.neutral {
+		color: $stats-neutral;
+	}
+
+	.up {
+		color: $stats-up;
+	}
+
+	.down {
+		color: $stats-down;
+	}
+} /* end koko analytics wrap */
