improve animations by redrawing elements whenever data really changes

--- a/assets/src/sass/admin.scss
+++ b/assets/src/sass/admin.scss
@@ -127,17 +127,6 @@
 
     }
 
-	.fade {
-		animation: fadein 1s;
-	}
 
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0
-    }
-    to {
-        opacity: 1
-    }
+	@import "util";
 }
