add prev & next icons to datepicker to quickly cycle through periods

--- a/assets/src/sass/_variables.scss
+++ b/assets/src/sass/_variables.scss
@@ -6,4 +6,5 @@ $stats-neutral: #aaa;
 $stats-up: limegreen;
 $stats-down: palevioletred;
 
-$color-muted: #AAA;
+$color-normal: #444;
+$color-muted: #999;
