--- a/assets/src/sass/datepicker.scss
+++ b/assets/src/sass/datepicker.scss
@@ -15,6 +15,13 @@
 		display: inline-block;
 		background: white;
 		line-height: 20px;
+
+		@media(max-width: 320px) {
+			.dashicons {
+				display: none;
+			}
+
+		}
 	}
 
 	.date-label .dashicons {
