--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -1,10 +1,13 @@
 @import './_variables.scss';
 
 .chart-container {
+	position: relative;
     padding: 12px;
 }
 
 .chart {
+
+
 	.bars {
 		rect.pageviews {
 			fill: #f05b4f;
@@ -14,6 +17,49 @@
 		}
 	}
 }
+
+.tooltip {
+	position: absolute;
+	z-index: 9991; /* above wp admin menu */
+	font-size: 12px;
+	color: #959da5;
+	text-align: left;
+	background: rgba(0, 0, 0, 0.8);
+	border-radius: 3px;
+
+	.heading {
+		font-weight: 600;
+		padding: 10px;
+		line-height: 1;
+	}
+
+	.content {
+		display: flex;
+
+		> div {
+			padding: 5px 10px;
+			width: 50%;
+			display: block;
+			flex: 1;
+			min-width: 90px;
+		}
+	}
+
+	.pageviews {
+		border-top: 3px solid #f05b4f;
+	}
+
+	.visitors {
+		border-top: 3px solid #d70206;
+	}
+
+	.amount {
+		color: #dfe2e5;
+		font-weight: 600;
+	}
+}
+
+
 
 #koko-analytics-dashboard-widget-mount {
     text-align: center;
