--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -6,8 +6,6 @@
 }
 
 .chart {
-
-
 	.bars {
 		rect.pageviews {
 			fill: #f05b4f;
@@ -22,14 +20,15 @@
 	position: absolute;
 	z-index: 9991; /* above wp admin menu */
 	font-size: 12px;
-	color: #959da5;
+	color: #EEE;
 	text-align: left;
-	background: rgba(0, 0, 0, 0.8);
-	border-radius: 3px;
+	background: rgba(46, 54, 63, 0.96);
+	border-radius: 4px;
+	box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
 
 	.heading {
 		font-weight: 600;
-		padding: 10px;
+		padding: 12px;
 		line-height: 1;
 	}
 
@@ -37,11 +36,10 @@
 		display: flex;
 
 		> div {
-			padding: 5px 10px;
+			padding: 6px 12px;
 			width: 50%;
 			display: block;
 			flex: 1;
-			min-width: 90px;
 		}
 	}
 
@@ -54,8 +52,8 @@
 	}
 
 	.amount {
-		color: #dfe2e5;
-		font-weight: 600;
+		color: #FFF;
+		font-weight: bold;
 	}
 }
 
