--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -19,12 +19,13 @@
 .tooltip {
 	position: absolute;
 	z-index: 9991; /* above wp admin menu */
-	font-size: 12px;
-	color: #EEE;
-	text-align: left;
-	background: rgba(46, 54, 63, 0.96);
-	border-radius: 4px;
-	box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
+
+	.tooltip-inner {
+		background: rgba(46, 54, 63, 0.96);
+		box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
+		border-radius: 4px;
+		color: #EEE;
+	}
 
 	.heading {
 		font-weight: 600;
@@ -54,6 +55,16 @@
 	.amount {
 		color: #FFF;
 		font-weight: bold;
+	}
+
+	.tooltip-arrow {
+		width: 0;
+		height: 0;
+		margin-left: auto;
+		margin-right: auto;
+		border-left: 6px solid transparent;
+		border-right: 6px solid transparent;
+		border-top: 6px solid rgba(46, 54, 63, 0.96);
 	}
 }
 
