--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -6,14 +6,16 @@
 }
 
 .chart {
-	.bars {
-		rect.pageviews {
-			fill: #f05b4f;
-		}
-		rect.visitors {
-			fill: #d70206;
-		}
-	}
+  overflow: visible;
+
+  .bars {
+	  rect.pageviews {
+		  fill: #f05b4f;
+	  }
+	  rect.visitors {
+		  fill: #d70206;
+	  }
+  }
 }
 
 .tooltip {
