use colors that have at least WCAAG AA contrast & use colors from admin scheme. closes #39 closes #40

--- a/assets/src/sass/_variables.scss
+++ b/assets/src/sass/_variables.scss
@@ -4,7 +4,7 @@ $border-divider: #EEE;
 
 $stats-neutral: #aaa;
 $stats-up: limegreen;
-$stats-down: palevioletred;
+$stats-down: #fb7272;
 
 $color-normal: #444;
-$color-muted: #999;
+$color-muted: #757575;
