--- a/assets/src/sass/chart.scss
+++ b/assets/src/sass/chart.scss
@@ -7,19 +7,11 @@
 
 .chart {
   overflow: visible;
-
 }
 
 .tooltip {
 	position: absolute;
 	z-index: 9991; /* above wp admin menu */
-
-	.tooltip-inner {
-		background: rgba(46, 54, 63, 0.96);
-		box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
-		border-radius: 4px;
-		color: #EEE;
-	}
 
 	.heading {
 		font-weight: 600;
@@ -27,7 +19,8 @@
 		line-height: 1;
 	}
 
-  	.pageviews, .visitors { border-top: 3px solid transparent; }
+  	.pageviews,
+	.visitors { border-top: 3px solid transparent; }
 
 	.content {
 		display: flex;
@@ -44,19 +37,24 @@
 		color: #FFF;
 		font-weight: bold;
 	}
-
-	.tooltip-arrow {
-		width: 0;
-		height: 0;
-		margin-left: auto;
-		margin-right: auto;
-		border-left: 6px solid transparent;
-		border-right: 6px solid transparent;
-		border-top: 6px solid rgba(46, 54, 63, 0.96);
-	}
 }
 
+.tooltip-inner {
+  background: rgba(46, 54, 63, 0.96);
+  box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
+  border-radius: 4px;
+  color: #EEE;
+}
 
+.tooltip-arrow {
+  width: 0;
+  height: 0;
+  margin-left: auto;
+  margin-right: auto;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid rgba(46, 54, 63, 0.96);
+}
 
 #koko-analytics-dashboard-widget-mount {
     text-align: center;
