--- a/assets/src/sass/datepicker.scss
+++ b/assets/src/sass/datepicker.scss
@@ -2,106 +2,106 @@
 
 #koko-analytics-admin {
 
-	.date-nav {
-		position: relative;
-		margin-bottom: 12px;
-	}
+  .date-nav {
+	position: relative;
+	margin-bottom: 12px;
 
-	.date-label {
+  }
+
+  .date-label {
+	cursor: pointer;
+	padding: 6px;
+	border: 1px solid $border-base;
+	border-radius: 6px;
+	display: inline-block;
+	background: white;
+	line-height: 20px;
+
+	@media(max-width: 320px) {
+	  .dashicons {
+		display: none;
+	  }
+	}
+  }
+
+  .date-label .dashicons {
+	margin-right: 2px;
+  }
+
+  .date-picker-ui {
+	background: white;
+	width: auto;
+	z-index: 20;
+	border-radius: 6px;
+	position: absolute;
+	margin-top: 6px;
+	box-shadow: 2px 2px 12px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  .date-quicknav {
+	background: #2e363f;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	color: white;
+	text-align: center;
+	padding: 12px;
+	font-weight: bold;
+	font-size: 1.1em;
+
+	.prev,
+	.next {
+	  margin: 0 6px;
+	  color: white;
+
+	  &:hover,
+	  &:focus {
 		cursor: pointer;
-		padding: 6px;
-		border: 1px solid $border-base;
-		border-radius: 6px;
-		display: inline-block;
-		background: white;
-		line-height: 20px;
-
-		@media(max-width: 320px) {
-			.dashicons {
-				display: none;
-			}
-
-		}
+		transform: scale(1.4);
+		transition: transform .2s;
+	  }
 	}
+  }
 
-	.date-label .dashicons {
-		margin-right: 2px;
+  .date-presets {
+	padding: 12px 24px 12px 12px;
+	border-right: 1px solid $border-base;
+	min-width: 100px;
+  }
+
+  .date-presets strong {
+	display: block;
+	padding: 6px 0;
+  }
+
+  .date-presets a {
+	display: block;
+	padding: 4px 0;
+  }
+
+  .date-picker {
+	padding: 12px;
+
+	@media(min-width: 680px) {
+	  min-width: 480px;
 	}
+  }
 
-	.date-picker-ui {
-		background: white;
-		width: auto;
-		z-index: 20;
-		border-radius: 6px;
-		position: absolute;
-		margin-top: 6px;
-		box-shadow: 2px 2px 12px 0px rgba(0,0,0,0.5);
-	}
+  .date-picker .pika-lendar {
+	margin: 0;
+  }
 
-	.date-quicknav {
-		background: #2e363f;
-		border-top-left-radius: 6px;
-		border-top-right-radius: 6px;
-		color: white;
-		text-align: center;
-		padding: 12px;
-		font-weight: bold;
-		font-size: 1.1em;
+  .pika-single {
+	color: inherit;
+	border: 0;
+  }
 
-		.prev,
-		.next {
-			margin: 0 6px;
-			color: white;
+  .pika-label {
+	font-size: inherit;
+	font-weight: normal;
+  }
 
-			&:hover,
-			&:focus {
-				cursor: pointer;
-				transform: scale(1.4);
-				transition: transform .2s;
-			}
-		}
-	}
+  .pika-prev, .pika-next {
+	opacity: 0.3;
+  }
 
-	.date-presets {
-		padding: 12px 24px 12px 12px;
-		border-right: 1px solid $border-base;
-		min-width: 100px;
-	}
-
-	.date-presets strong {
-		display: block;
-		padding: 6px 0;
-	}
-
-	.date-presets a {
-		display: block;
-		padding: 4px 0;
-	}
-
-	.date-picker {
-		padding: 12px;
-
-		@media(min-width: 680px) {
-			min-width: 480px;
-		}
-	}
-
-	.date-picker .pika-lendar {
-		margin: 0;
-	}
-
-	.pika-single {
-		color: inherit;
-		border: 0;
-	}
-
-	.pika-label {
-		font-size: inherit;
-		font-weight: normal;
-	}
-
-	.pika-prev, .pika-next {
-		opacity: 0.3;
-	}
-
-} /* end koko analytics wrap */
+}  /* end koko analytics wrap */
