--- a/assets/src/sass/admin.scss
+++ b/assets/src/sass/admin.scss
@@ -151,6 +151,13 @@ body.dashboard_page_koko-analytics {
 	}
   }
 
+  pre.code {
+	display: block;
+	border: 1px solid #ccc;
+	background: white;
+	padding: 1em;
+  }
+
   .pagination {
 	color: $color-muted;
 	cursor: pointer;
