--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -18,22 +18,22 @@ body.dashboard_page_koko-analytics {
 #koko-analytics-admin .box-grid {
 	display: grid;
 	grid-gap: 12px;
-	grid-template-columns:8fr 2fr 2fr;
+	grid-template-columns: min-content 8fr 2fr 2fr;
 	border-top: 1px dashed #eee;
 	padding: 6px 12px;
 	text-align: left
 }
 
 #koko-analytics-admin .box-grid.c4 {
-	grid-template-columns: 9fr 1fr 1fr 1fr;
+	grid-template-columns: min-content 9fr 1fr 1fr 1fr;
 }
 
 @media (max-width: 800px) {
-
 	#koko-analytics-admin .box {
 		grid-column: span 6
 	}
 }
+
 
 #koko-analytics-admin .box .head {
 	font-weight: bold;
@@ -47,8 +47,6 @@ body.dashboard_page_koko-analytics {
 }
 
 #koko-analytics-admin .box .muted {
-	width: 24px;
-	display: inline-block;
 	color: #757575;
 	font-size: .9em
 }
@@ -265,4 +263,61 @@ body.dashboard_page_koko-analytics {
 }
 #koko-analytics-admin .pika-prev, #koko-analytics-admin .pika-next {
 	opacity: 0.3;
+}
+
+.chart-container {
+	position: relative;
+}
+
+.chart {
+	overflow: visible;
+}
+
+.chart-tooltip {
+	position: absolute;
+	z-index: 9991; /* above wp admin menu */
+}
+.chart-tooltip .heading {
+	font-weight: 600;
+	padding: 12px;
+	line-height: 1;
+}
+
+.chart-tooltip .pageviews,
+.chart-tooltip .visitors { border-top: 3px solid transparent; }
+
+.chart-tooltip .content {
+	display: flex;
+}
+.chart-tooltip .content > div {
+	padding: 6px 12px;
+	width: 50%;
+	display: block;
+	flex: 1;
+}
+
+.chart-tooltip .amount {
+	color: #FFF;
+	font-weight: bold;
+}
+
+.tooltip-inner {
+	background: rgba(46, 54, 63, 0.96);
+	box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
+	border-radius: 4px;
+	color: #EEE;
+}
+
+.tooltip-arrow {
+	width: 0;
+	height: 0;
+	margin-left: auto;
+	margin-right: auto;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid rgba(46, 54, 63, 0.96);
+}
+
+#koko-analytics-dashboard-widget-mount {
+	text-align: center;
 }
